| Summary: | ASTERISK-27198: res_pjsip: SDP contains IP4 instead of IP6 when rtp_ipv6 set to yes | ||
| Reporter: | Martin Cisárik (martin.cisarik@gmail.com) | Labels: | pjsip |
| Date Opened: | 2017-08-14 07:57:14 | Date Closed: | 2017-10-25 06:27:11 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 14.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | With IPv6 in PJSIP.outbound_proxy and rtp_ipv6=yes
Asterisk sends SIP INVITE with: Internet Protocol Version 6, Src: 2001:DB8::360, Dst: 2001:DB8::2b SDP: Owner/Creator, Session Id (o): - 10628211 10628211 IN {color:red}IP4{color} 2001:DB8::360 Connection Information (c): IN {color:red}IP4{color} 2001:DB8::360 The {color:red}IP4{color} is wrong, it should be *IP6*. This bug is similar to ASTERISK-27102. Solution is same, remove the option "rtp_ipv6". | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-08-14 07:57:16.615-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Martin Cisárik (martin.cisarik@gmail.com) 2017-08-14 08:01:12 See https://community.asterisk.org/t/ipv6-in-pjsip-outbound-proxy/71658/3 By: George Joseph (gjoseph) 2017-10-23 12:38:43.748-0500 Martin, There are patches available for review on Gerrit if you'd like to give one a try. Click the "Gerrit Reviews" tab above to get links. By: Friendly Automation (friendly-automation) 2017-10-25 06:27:12.352-0500 Change 6871 merged by Jenkins2: res_pjsip_sdp_rtp: Fix setting of address type for rtp_ipv6 [https://gerrit.asterisk.org/6871|https://gerrit.asterisk.org/6871] By: Friendly Automation (friendly-automation) 2017-10-25 06:40:13.544-0500 Change 6873 merged by Joshua Colp: res_pjsip_sdp_rtp: Fix setting of address type for rtp_ipv6 [https://gerrit.asterisk.org/6873|https://gerrit.asterisk.org/6873] By: Friendly Automation (friendly-automation) 2017-10-25 06:45:12.243-0500 Change 6872 merged by Joshua Colp: res_pjsip_sdp_rtp: Fix setting of address type for rtp_ipv6 [https://gerrit.asterisk.org/6872|https://gerrit.asterisk.org/6872] | ||